modal z-index and design fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,7 +206,7 @@ pre code {
 /* ---------------END Custom Navbar Toggle------------------ */
 .header.navbar-fixed-top {
   background: #fff;
-  z-index: 9999;
+  z-index: 9998;
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
@@ -823,6 +823,19 @@ pre code {
 }
 
 /* Login Popup Modal */
+.close {
+  position: absolute;
+  right: 15px;
+  top: 0;
+  font-size: 35px;
+}
+.close:focus {
+  outline: none;
+}
+.modal {
+  z-index: 9999 !important;
+  top: 75px;
+}
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
@@ -832,6 +845,9 @@ pre code {
   border-radius: 2px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  position: absolute;
+  right: 0;
+  left: 0;
 }
 
 .loginmodal-container h1 {
